images added to dogs.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,17 +66,20 @@ nav>a:hover {
     border: solid;
 }
 
-.card bg-primary {
-    background-color: #A6A15E;
-    border: solid;
+.card-deck {
+    background-color: olive;
+
+}
+
+.card-body text-left {
+    text-align: justify;
 }
 
 /* ------------ Images -------------- */
 
 #hero-image {
-    <img src="assests/images/Greyhound_and_sunset.jpg" alt="greyhound in silhouette">height: 100px;
-    width: 100%;
-
+    height: 900px;
+    width: 100%
 }
 
 /* ------------ Footer -------------- */
@@ -106,6 +109,7 @@ footer {
 
 #map {
     height: 100%;
-    width: 100%;
+    width: 40%;
     border: none;
+    float: right;
 }
