--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,19 @@ nav>a:hover {
     color: silver;
 }
 
+a {
+    color: black;
+}
+
+a:hover {
+    color: rgb(255, 251, 252);
+}
+
 /* ------------ Body -------------- */
+
+#our-dogs {
+    color: beige text-align: center;
+}
 
 .row {
     padding-top: 2%;
@@ -68,6 +80,7 @@ nav>a:hover {
 
 .card-deck {
     background-color: olive;
+    padding: 5%;
 
 }
 
@@ -80,6 +93,12 @@ nav>a:hover {
 #hero-image {
     height: 900px;
     width: 100%
+}
+
+.card-img-top {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
 }
 
 /* ------------ Footer -------------- */
