--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,11 +64,6 @@ p {
     color: black;
 }
 
-.dogs {
-    background-color: #A6A15E;
-    text-align: center;
-}
-
 /* ------------ Links -------------- */
 
 a {
@@ -128,54 +123,70 @@ a:hover {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url(/assets/images/greyhound_and_sunset.jpg) no-repeat center center;
+    background: url(/assets/images/greyhound_and_sunset_NEW.jpg) no-repeat center center;
 
-    animation-name: hero-zoom;
+    /*animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
-.blog-image {
-    float: right;
-    height: 110px;
-    width: 100px;
-    padding: 20px 10px 10px 10px;
-}
-
-.card-img-top {
+#hero-outer {
+    height: 600px;
     width: 100%;
-    height: 20vw;
-    object-fit: cover;
+    overflow: hidden;
 }
 
-/* ------------ Footer -------------- */
+@keyframes hero-zoom {
+    from {
+        transform: scale(1);
+    }
 
-footer {
-    height: 100px;
-}
+    to {
+        transform: scale(1.1);
+    }
 
-.social-networks {
-    text-align: center;
-}
+}*/
+    .blog-image {
+        float: right;
+        height: 110px;
+        width: 100px;
+        padding: 20px 10px 10px 10px;
+    }
 
-.social-networks li {
-    display: inline;
-}
+    .card-img-top {
+        width: 100%;
+        height: 20vw;
+        object-fit: cover;
+    }
 
-.social-networks i {
-    font-size: 160%;
-    margin: 1%;
-    padding: 5%;
-    color: beige;
-}
+    /* ------------ Footer -------------- */
 
-.copyright {
-    color: beige;
-}
+    footer {
+        height: 100px;
+    }
 
-#map {
-    height: 100%;
-    width: 100%;
-    border: none;
-    float: none;
-}
+    .social-networks {
+        text-align: center;
+    }
+
+    .social-networks li {
+        display: inline;
+    }
+
+    .social-networks i {
+        font-size: 160%;
+        margin: 1%;
+        padding: 5%;
+        color: beige;
+    }
+
+    .copyright {
+        color: beige;
+    }
+
+    #map {
+        height: 100%;
+        width: 100%;
+        border: none;
+        float: none;
+    }
