--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@600&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-
 
 /* ----- Colors and Fonts -----  */
 body {
@@ -8,36 +6,44 @@ body {
     background-color: olive;
 }
 
-/* ------------ Header -------------- */
-
-header {
-    color: beige;
-}
-
 /* ------------ Navigation -------------- */
-nav {
-    font-size: x-large;
-    padding: 20px;
-    margin-left: 60px;
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #A6A15E;
 }
 
-nav>a {
-    text-decoration: none;
+li {
+    float: left;
+}
+
+li a {
+    display: block;
     color: beige;
-    margin: 1rem;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-nav>a:hover {
-    color: silver;
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #C69F89;
 }
 
+.active {
+    background-color: olive;
+}
+
+/* ------------ Header -------------- */
 /* ------------ Body -------------- */
 
 h1 {
     font-family: 'Ubuntu', 'sans-serif';
     color: beige;
     font-size: 5rem;
-    margin-left: 90px;
+    margin-left: 70px;
 }
 
 h2 {
@@ -124,10 +130,6 @@ a:hover {
     height: 600px;
     width: 100%;
     background: url(/assets/images/tonia-kraakman1_resize620.jpg) no-repeat center center;
-
-    /*animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;*/
 }
 
 #hero-outer {
@@ -136,57 +138,47 @@ a:hover {
     overflow: hidden;
 }
 
-@keyframes hero-zoom {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.1);
-    }
-
+.blog-image {
+    float: right;
+    height: 100px;
+    width: 100px;
+    padding: 20px 10px 10px 10px;
 }
-    .blog-image {
-        float: right;
-        height: 100px;
-        width: 100px;
-        padding: 20px 10px 10px 10px;
-    }
 
-    .card-img-top {
-        width: 100%;
-        height: 20vw;
-        object-fit: cover;
-    }
+.card-img-top {
+    width: 100%;
+    height: 20vw;
+    object-fit: cover;
+}
 
-    /* ------------ Footer -------------- */
+/* ------------ Footer -------------- */
 
-    footer {
-        height: 100px;
-    }
+footer {
+    height: 50px;
+}
 
-    .social-networks {
-        text-align: center;
-    }
+.social-networks {
+    text-align: center;
+}
 
-    .social-networks li {
-        display: inline;
-    }
+.social-networks li {
+    display: inline;
+}
 
-    .social-networks i {
-        font-size: 160%;
-        margin: 1%;
-        padding: 5%;
-        color: beige;
-    }
+.social-networks i {
+    font-size: 250%;
+    margin: 1%;
+    padding: 5%;
+    color: beige;
+}
 
-    .copyright {
-        color: beige;
-    }
+.copyright {
+    color: beige;
+}
 
-    #map {
-        height: 100%;
-        width: 100%;
-        border: none;
-        float: none;
-    }
+#map {
+    height: 100%;
+    width: 100%;
+    border: none;
+    float: none;
+}
