images resized to improve performance

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,15 +168,15 @@ a:hover {
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url(/assets/images/tonia-kraakman2_resize620compress.jpg) no-repeat center center;
+    background: url(/assets/images/tonia-kraakman1_resize620compress.jpg) no-repeat center center;
 }
 
-#hero-outer {
+/*#hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
 }
-
+*/
 .blog-image {
     float: right;
     height: 100px;
