--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,28 +68,6 @@ p {
     color: black;
 }
 
-.text1 {
-    border-radius: 25px;
-    border: 2px solid black;
-    background: #A6A15E;
-    padding: 20px;
-    width: 1200px;
-    height: 100px;
-    box-sizing: border-box;
-    margin-left: 30px;
-}
-
-.text2 {
-    border-radius: 25px;
-    border: 2px solid black;
-    background: #A6A15E;
-    padding: 20px;
-    width: 1200px;
-    height: 100px;
-    box-sizing: border-box;
-    margin-left: 30px;
-}
-
 #name {
     border-radius: 8px;
 }
@@ -126,6 +104,17 @@ a:hover {
 }
 
 /* ------------ Layout -------------- */
+
+.container {
+    border-radius: 25px;
+    border: 2px solid black;
+    background: #A6A15E;
+    padding: 20px;
+    width: 1245px;
+    height: 100px;
+    box-sizing: border-box;
+    margin-left: 10px;
+}
 
 .row {
     padding-top: 2%;
@@ -171,12 +160,6 @@ a:hover {
     background: url(/assets/images/tonia-kraakman1_resize620compress.jpg) no-repeat center center;
 }
 
-/*#hero-outer {
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
-}
-*/
 .blog-image {
     float: right;
     height: 100px;
