map on contact page made responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,11 +190,17 @@ a:hover {
     object-fit: cover;
 }
 
-#map {
-    height: 260px;
-    width: 480px;
-    border: none;
-    float: none;
+.google-map {
+    padding-bottom: 50%;
+    position: relative;
+}
+
+.google-map iframe {
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
 }
 
 /* ------------ Footer -------------- */
