--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,11 @@ p {
 }
 
 #comments {
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
 #submit {
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 /* ------------ Links -------------- */
@@ -166,7 +166,7 @@ a:hover {
 }
 
 #hero-image {
-    height: 600px;
+    height: 800px;
     width: 100%;
     background: url(../images/tonia_kraakman1.jpg) no-repeat center center;
 }
@@ -240,15 +240,14 @@ label {
 
 input[type=submit] {
     background-color: white;
-    width: 20%;
-    float: right;
+    width: 15%;
     border: 2px solid;
     border-radius: 10px;
     color: black;
-    padding: 16px 32px;
+    padding: 32x 32px;
     text-decoration: none;
     text-align: center;
-    margin: 4px 2px;
+    margin: 2px 2px;
     cursor: pointer;
 }
 
