--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,7 +248,7 @@ input[type=submit] {
     border: 2px solid;
     border-radius: 10px;
     color: black;
-    padding: 32x 32px;
+    padding: 32px 32px;
     text-decoration: none;
     text-align: center;
     margin: 2px 2px;
