--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,6 @@ a:hover {
 
 .col-sm-6 {
     background-color: #A6A15E;
-    
     text-align: left;
     padding: 30px;
 }
@@ -231,7 +230,7 @@ textarea {
     width: 100%;
     padding: 12px;
     border: 2px solid black;
-    border-radius: 4px;
+    border-radius: 8px;
     box-sizing: border-box;
     resize: vertical;
 }
@@ -248,11 +247,15 @@ input[type=submit] {
     border: 2px solid;
     border-radius: 10px;
     color: black;
-    padding: 32px 32px;
+    padding: 15px 15px;
     text-decoration: none;
     text-align: center;
-    margin: 2px 2px;
+    margin-left: 385px;
     cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: rgb(203, 198, 198);
 }
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
