--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ a:hover {
 .logo {
     float: right;
     padding-top: 20px;
-    margin-right: 10px;
+    margin-right: 40px;
 }
 
 .blog-image {
@@ -224,6 +224,10 @@ a:hover {
 }
 
 /* Style inputs, select elements and textareas */
+
+.float-end {
+    
+}
 input,
 select,
 textarea {
@@ -260,7 +264,7 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-
+    
     .col-25,
     .col-75,
     input[type=submit] {
