--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,8 @@ a:hover {
     float: right;
     padding-top: 20px;
     margin-right: 40px;
+    max-width: 100%;
+    height: auto;
 }
 
 .blog-image {
@@ -191,6 +193,11 @@ a:hover {
     width: 100%;
     height: 20vw;
     object-fit: cover;
+}
+
+#dogs-playing {
+    max-width: 100%;
+    height: auto;
 }
 
 .google-map {
@@ -225,9 +232,6 @@ a:hover {
 
 /* Style inputs, select elements and textareas */
 
-.float-end {
-    
-}
 input,
 select,
 textarea {
@@ -264,11 +268,10 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    
-    .col-25,
-    .col-75,
+
     input[type=submit] {
         width: 100%;
         margin-top: 0;
     }
 }
+
