--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,11 @@ input[type=submit]:hover {
     object-fit: cover;
 }
 
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
+
 #dogs-playing {
     max-width: 100%;
     height: auto;
@@ -186,6 +191,10 @@ input[type=submit]:hover {
 
 #cave-painting {
     float: right;
+}
+
+#dog-lying {
+    margin-top: 40px;
 }
 
 .google-map {
@@ -225,8 +234,4 @@ input[type=submit]:hover {
         width: 100%;
         margin-top: 0;
     }
-}
-
-.img-responsive {
-    max-width: 100%;
 }
