--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* ----- Fonts -----  */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
-/* ------Navigation --*/
+/* ------Nav Bar --*/
 .nav-bar {
     list-style-type: none;
     margin: 0;
@@ -108,9 +108,8 @@ a:hover {
     padding: 2%;
 }
 
-.card-body text-left {
+.card-body {
     text-align: justify;
-    background-color: olive;
 }
 
 .card {
@@ -160,14 +159,6 @@ input[type=submit]:hover {
     background: url(../images/tonia_kraakman1.jpg) no-repeat center center;
 }
 
-#logo {
-    float: left;
-    padding-top: 20px;
-    margin-right: 40px;
-    max-width: 400px;
-    height: auto;
-}
-
 #blog-image {
     float: right;
     height: 175px;
@@ -178,6 +169,14 @@ input[type=submit]:hover {
 #adoption {
     float: left;
     margin: 0 15px 0 0;
+}
+
+#logo-square {
+    float: left;
+    padding-top: 20px;
+    margin-right: 40px;
+    max-width: 400px;
+    height: auto;
 }
 
 #cave-painting {
@@ -192,14 +191,11 @@ input[type=submit]:hover {
 
 .card-img-top {
     width: 100%;
-    height: 20vw;
-    object-fit: cover;
+    height: 20vh;
+    object-fit: contain;
 }
 
-.img-responsive {
-    width: 100%;
-    height: auto;
-}
+/* ------------ Map  -------------- */
 
 .google-map {
     padding-bottom: 60%;
@@ -231,11 +227,18 @@ input[type=submit]:hover {
     color: beige;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+/* -- Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other -- */
 @media screen and (max-width: 600px) {
 
     input[type=submit] {
         width: 100%;
         margin-top: 0;
     }
+}
+
+/* -- Responsive layout - make card deck images resize on smaller screens --*/
+
+.img-responsive {
+    width: 100%;
+    height: auto;
 }
