--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,8 +121,8 @@ a:hover {
 .card-img-top {
     border-radius: 25px 25px 0 0;
     width: 100%;
-    height: 20vw;
-    object-fit: contain;
+    height: 30vh;
+    object-fit: cover;
 }
 
 /*------Style inputs, select elements and textareas----*/
@@ -176,8 +176,6 @@ input[type=submit]:hover {
 
 #logo-square {
     float: left;
-    padding-top: 20px;
-    margin-right: 40px;
     max-width: 400px;
     height: auto;
 }
